--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
       - trying
       - release/**
   pull_request:
-  schedule: [cron: "45 6 * * *"]
+  # schedule: [cron: "45 6 * * *"]
 
 name: Run tests
 jobs:
