--- a/geo/Cargo.toml
+++ b/geo/Cargo.toml
@@ -15,6 +15,7 @@ rust-version = "1.58"
 use-proj = ["proj"]
 proj-network = ["use-proj", "proj/network"]
 use-serde = ["serde", "geo-types/serde"]
+use-arrow = ["geo-types/arrow2"]
 
 [dependencies]
 float_next_after = "0.1.5"
